# sample

./: CMakeLists.txt  README
contrib/: .contrib.cmake.swp  contrib.cmake
src/: data.cpp  data.hpp  data_tests.cpp  execute.hpp  operation.hpp  operation_tests.cpp  sample.cpp
testing/: tests_general.cpp  tests_general.hpp
